# DeepCameraX

./: README.md
DeepCameraX/: README.md
DeepCameraX/app/: build.gradle
DeepCameraX/app/src/androidTest/java/com/android/example/deepcamerax/: CameraPreviewTest.kt
DeepCameraX/app/src/main/: AndroidManifest.xml
DeepCameraX/app/src/main/java/com/android/example/deepcamerax/: MainActivity.kt  MainApplication.kt
DeepCameraX/app/src/main/java/com/android/example/deepcamerax/fragments/: CameraFragment.kt  GalleryFragment.kt  PermissionsFragment.kt  PhotoFragment.kt
DeepCameraX/app/src/main/java/com/android/example/deepcamerax/utils/: ViewExtensions.kt
DeepCameraX/app/src/main/res/layout/: fragment_camera.xml
DeepCameraX/app/src/main/res/navigation/: nav_graph.xml
DeepCameraX/app/src/main/res/values/: strings.xml
DeepCameraX/app/src/test/java/com/android/example/deepcamerax/: MainInstrumentedTest.kt
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/tflitecxx/: MainActivity.java
app/src/main/ml/: model_SuperPointDepthwiseSeparableConv_120x160.tflite
app/src/main/ml/super_point/: spModel_lst.tflite
app/src/main/res/values/: strings.xml
